update the last one

--- a/index.html
+++ b/index.html
@@ -7,5 +7,21 @@
 </head>
 <body>
     <h1>Exam is coming, pray for me</h1>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto optio iste qui sequi sint veniam suscipit! Voluptatem ipsa magnam sapiente consequuntur, cupiditate quo reprehenderit blanditiis! Fuga quidem sint atque quaerat.
+    </p>
+    <h2>Should</h2>
+    <p>
+        <ol>
+            <li>git add .</li>
+            <li>git commit -m"Somthing"</li>
+            <li>git push</li>
+        </ol>
+        <h2>Only one time</h2>
+        <ul>
+            <li>git init</li>
+            <li>git remote add origin https://github.com/Polashkaron007/my-first-github.git</li>
+        </ul>
+    </p>
 </body>
 </html>
