--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         <h2>Only one time</h2>
         <ul>
             <li>git init</li>
+            <li>git branch-M main</li>
             <li>git remote add origin https://github.com/Polashkaron007/my-first-github.git</li>
+            
         </ul>
     </p>
 </body>
